--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,60 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
+    @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700%7CQuicksand:300,400,500,700&subset=latin-ext');
+    .container-banner h2 {
+    margin-top: 10px;
+    font-size: 40px;
+    font-weight: lighter;
+    opacity: 0.9;
+    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   }
+    .content-banner {
+      font-family: "Quicksand", sans-serif;;
+    }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    .container-banner {
+      background-color: #212121;
+      color: white;
+      text-align: center;
+      height: 100vh;
+      /* if you have a 70px navbar => height: calc(100vh - 70px); */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      position: relative;
+    }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    a{
+      font-size: 20px;
+      color: #99378c;
+      text-decoration:none;
+      text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+    }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    img{
+      height:70px;
+    }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    body {
+    display: block;
+    margin: 0px;
+    }
   </style>
 </head>
 
 <body class="rails-default-error-page">
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+  <div class="container container-banner">
+    <div class="content-banner">
+      <img src="https://img15.hostingpics.net/pics/111424lovifylogo.png">
+      <h2>Sorry! The page you are looking for does not exist.</h2>
+      <a href = "/">Back to home page</a>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
