--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,8 @@
  <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>Sorry! Something went wrong. It's not you, it's us.</title>
+  <link rel="shortcut icon" type="image/x-icon" href="https://img15.hostingpics.net/pics/870550logo.png" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700%7CQuicksand:300,400,500,700&subset=latin-ext');
@@ -34,7 +35,11 @@
       color: #99378c;
       text-decoration:none;
       text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-    }
+      transition:0.3s;
+      }
+      a:hover{
+        color:#555;
+      }
 
     img{
       height:70px;
